styles.css
/* ... */
/* lg */
@media (min-width: 1024px) {

  .lg\:px-7 {
    padding-left: 120px;
    padding-right: 120px;
  }


  .floorplan-site {
    width: 60%;

  }

  .floorplan {
    font-size: 51px !important;
    font-weight: 800;
    line-height: 61.2px;
    text-align: center;
    color: #2E565B;
    padding-top: 15px;
  }

  .grid-cols-3 {
    grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
  }

  .-top-28 {
    top: 0;
  }

  .nav-link {
    font-size: 16px;

  }

  .icon {
    height: 5rem;
  }

  .section-heading {
    font-size: 51px;
    line-height: 1;
  }

  .lg\:h-12 {
    height: 3rem;
  }

  .lg\:h-8 {
    height: 2rem;
  }

  .lg\:w-1\/3 {
    width: 33.333333%;
  }

  .lg\:w-12 {
    width: 3rem;
  }

  .lg\:w-6 {
    width: 1.5rem;
  }

  .lg\:w-8 {
    width: 2rem;
  }

  .lg\:w-auto {
    width: auto;
  }

  .lg\:max-w-72 {
    max-width: 18rem;
  }

  .lg\:flex-row {
    flex-direction: row;
  }

  .lg\:items-start {
    align-items: flex-start;
  }

  .lg\:items-center {
    align-items: center;
  }

  .lg\:justify-end {
    justify-content: flex-end;
  }

  .lg\:gap-0 {
    gap: 0px;
  }

  .lg\:gap-20 {
    gap: 5rem;
  }

  .lg\:text-start {
    text-align: start;
  }

  .lg\:text-3xl {
    font-size: 1.875rem;
    line-height: 2.25rem;
  }

  .lg\:text-base {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

/* md */
@media (min-width: 767px) {
  .floorplan {
    font-size: 23px;
    line-height: 30.2px;
  }


  .md\:gap-3 {
    gap: 3.2rem;
  }

  .icons {
    grid-template-columns: repeat(5, minmax(0, 1fr));
    row-gap: 2.5rem;
    -moz-column-gap: 2rem;
    column-gap: 2rem;
  }

  .section-subheading {
    width: 75%;
  }


  .md\:block {
    display: block;
  }

  .md\:hidden {
    display: none;
  }

  .md\:h-\[55px\] {
    height: 50px;
  }

  .md\:w-1\/2 {
    width: 50%;
  }

  .md\:w-1\/3 {
    width: 33.333333%;
  }

  .md\:w-2\/3 {
    width: 66.666667%;
  }

  .md\:w-4\/5 {
    width: 80%;
  }

  .md\:max-w-44 {
    max-width: 11rem;
  }

  .md\:flex-row {
    flex-direction: row;
  }

  .md\:gap-0 {
    gap: 0px;
  }

  .md\:rounded-l-none {
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
  }

  .md\:rounded-r-none {
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
  }

  .md\:text-4xl {
    font-size: 2.25rem;
    line-height: 2.5rem;
  }

  .md\:text-sm {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }

  .md\:\!leading-\[50px\] {
    line-height: 56px !important;
  }



}

/* sm: mobile  */
@media (min-width: 300px) and (max-width: 767px) {

  .px-7 {
    padding-left: 20px;
    padding-right: 20px;
  }


  .sm\:w-full {
    width: 100%;
  }

  .site-plan {
    padding: 30px 12px;
  }

  .mobile-flex-col {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .sm\:w-2\/3 {
    width: 90%;
  }

  .sections {

    padding: 40px 20px;
  }


  .slick-slide {

    margin-top: 20px !important;

  }

  .content {
    padding-top: 0px;

  }

  .icon-group {
    font-size: 1rem;
    line-height: 1.5rem;
  }

  .section-subheading {
    padding-left: 0px;
    padding-right: 0px;
  }

  .grid-cols-3 {
    grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
  }


  .content-slider-mobile {
    grid-column: span 2 / span 2;
  }

  .text-perks {
    width: 20rem;
  }

  /* 
  .mobile-padding {
    padding: 40px;
  } */

  .section-gated {
    padding: 0px 80px;
  }

  .slicker-mobile {
    border-radius: 8px;
  }

  .slick-center img {
    transform: scale(0.5);
    /* Scale up the center slide */
  }

  .slick-slide:not(.slick-center) img {
    transform: scale(0.5);
    /* Scale down the non-center slides */
  }

  .bg-custom-gradient {
    /* height: 30vh; */
    height: 55%;

  }

  .h-custom {
    height: 18rem;
  }

  .floorplan {
    font-size: 23px !important;
    line-height: 25.2px;
  }

  .aspect-auto {
    z-index: -1 !important;
  }

  .h-w-custom-plan {
    height: 50vh;
  }

  .section-5-map {
    max-width: 100%;
    height: auto;
  }

}

/* custom for mobile */
@media screen and (max-width: 321px) {
  .-top-28 {
    top: -19rem;
  }

}


@media (max-width: 640px) {
  .sm\:w-4\/5 {
    width: 80%;
  }
}


/* new responsive a */
@media screen and (max-width: 431px) {

  .img-mobile {
    width: 85%;
    border-radius: 30px;
    margin: 20px auto;
    padding-top: 0px;
  }
}


@media screen and (max-width: 767px) {
  .bg-custom-gradient {
    height: 55%;
  }
}

